Add mx width to content

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <span>
+    <span class="content">
       It has been
       <span id="days"></span>
       since the last stabbing in Metro Vancouver.
