--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 </body>
 
 <script>
-  var output = '<a href="https://globalnews.ca/news/9626929/surrey-central-skytrain-station-stabbing-transit-violence/">';
+  var output = '<a href="https://bc.ctvnews.ca/stabbing-and-shooting-in-surrey-just-hours-and-blocks-apart-send-2-to-hospital-1.6378351">';
   var today = new Date();
   today.setHours(0, 0, 0, 0);
-  var stabdate = new Date(1681542000000);
+  var stabdate = new Date(1682859600000);
   var numdays = Math.floor((today.getTime() - stabdate.getTime()) / 86400000);
   output += numdays + '</a> day';
   if (numdays != 1) {
