--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <script>
   var output = '<a href="https://bc.ctvnews.ca/early-morning-stabbing-in-burnaby-sends-1-to-hospital-suspect-arrested-rcmp-1.6434453">';
   var today = new Date();
-  today.setHours(0, 0, 0, 0);
+//   today.setHours(0, 0, 0, 0);
   var stabdate = new Date(1686302100000);
   var numdays = Math.floor((today.getTime() - stabdate.getTime()) / 86400000);
   output += numdays + '</a> day';
