Update index.html - fix const

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </body>
 
 <script>
-  const output = '<a href="https://globalnews.ca/news/9865362/man-critical-condition-stabbing-surrey-bus/">';
+  let output = '<a href="https://globalnews.ca/news/9865362/man-critical-condition-stabbing-surrey-bus/">';
   const today = new Date();
 
   const year = 2023;
