--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 </body>
 
 <script>
-  let output = '<a href="https://bc.ctvnews.ca/3-stabbed-at-festival-in-vancouver-s-chinatown-police-say-1.6555913>';
+  const url = 'https://bc.ctvnews.ca/3-stabbed-at-festival-in-vancouver-s-chinatown-police-say-1.6555913';
+  const output = `<a href="${url}">`;
   const today = new Date();
 
   const year = 2023;
