--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <script>
   const url = 'https://bc.ctvnews.ca/3-stabbed-at-festival-in-vancouver-s-chinatown-police-say-1.6555913';
-  const output = `<a href="${url}">`;
+  let output = `<a href="${url}">`;
   const today = new Date();
 
   const year = 2023;
