--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 </body>
 
 <script>
-  const url = 'https://bc.ctvnews.ca/3-stabbed-at-festival-in-vancouver-s-chinatown-police-say-1.6555913';
+  const url = 'https://vancouver.citynews.ca/2023/10/05/downtown-eastside-stabbing-one-hospitalized/';
   let output = `<a href="${url}">`;
   const today = new Date();
 
   const year = 2023;
-  const month = 9; // Month number
-  const day = 10;
-  const hour = 18;
+  const month = 10; // Month number
+  const day = 5;
+  const hour = 10;
   const minutes = 00;
   
   const stabDate = new Date(year, month - 1, day, hour, minutes);
