--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 </body>
 
 <script>
-  const url = 'https://vancouver.citynews.ca/2023/10/05/downtown-eastside-stabbing-one-hospitalized/';
+  const url = 'https://bc.ctvnews.ca/2nd-degree-murder-charge-laid-after-woman-stabbed-to-death-in-new-westminster-1.6601771';
   let output = `<a href="${url}">`;
   const today = new Date();
 
   const year = 2023;
   const month = 10; // Month number
-  const day = 5;
-  const hour = 10;
-  const minutes = 00;
+  const day = 13;
+  const hour = 17;
+  const minutes = 10;
   
   const stabDate = new Date(year, month - 1, day, hour, minutes);
   const daysSinceStabbing = Math.floor((today.getTime() - stabDate.getTime()) / 86400000);
