2023-11-16: 2 arrested, 1 seriously injured after Guildford Town Centre stabbing: police

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 </body>
 
 <script>
-  const url = 'https://bc.ctvnews.ca/victim-uncooperative-after-stabbing-at-gallery-nightclub-vancouver-police-say-1.6633508';
+  const url = 'https://vancouver.citynews.ca/2023/11/16/surrey-guildford-police/';
   let output = `<a href="${url}">`;
   const today = new Date();
 
   const year = 2023;
   const month = 11; // Month number
-  const day = 4;
-  const hour = 1;
-  const minutes = 30;
+  const day = 16;
+  const hour = 16;
+  const minutes = 25;
   
   const stabDate = new Date(year, month - 1, day, hour, minutes);
   const daysSinceStabbing = Math.floor((today.getTime() - stabDate.getTime()) / 86400000);
