--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 </body>
 
 <script>
-  const url = 'https://vancouver.citynews.ca/2023/11/22/vancouver-police-downtown-eastside-stabbing/';
+  const url = 'https://www.cbc.ca/news/canada/british-columbia/2-good-samaritans-stabbed-while-thwarting-attempted-facebook-marketplace-robbery-vancouver-police-1.7070019';
   let output = `<a href="${url}">`;
   const today = new Date();
 
   const year = 2023;
-  const month = 11; // Month number
-  const day = 21;
-  const hour = 15;
-  const minutes = 00;
+  const month = 12; // Month number
+  const day = 26;
+  const hour = 19;
+  const minutes = 40;
   
   const stabDate = new Date(year, month - 1, day, hour, minutes);
   const daysSinceStabbing = Math.floor((today.getTime() - stabDate.getTime()) / 86400000);
