2024-01-01: 2 'youths' stabbed in Burnaby: RCMP

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 </body>
 
 <script>
-  const url = 'https://www.cbc.ca/news/canada/british-columbia/2-good-samaritans-stabbed-while-thwarting-attempted-facebook-marketplace-robbery-vancouver-police-1.7070019';
+  const url = 'https://bc.ctvnews.ca/2-youths-stabbed-in-burnaby-rcmp-1.6706889';
   let output = `<a href="${url}">`;
   const today = new Date();
 
-  const year = 2023;
-  const month = 12; // Month number
-  const day = 26;
-  const hour = 19;
-  const minutes = 40;
+  const year = 2024;
+  const month = 1; // Month number
+  const day = 1;
+  const hour = 1;
+  const minutes = 00;
   
   const stabDate = new Date(year, month - 1, day, hour, minutes);
   const daysSinceStabbing = Math.floor((today.getTime() - stabDate.getTime()) / 86400000);
