2024-01-17: Suspect sought after woman ‘stabbed by unknown male’ in Surrey

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 </body>
 
 <script>
-  const url = 'https://bc.ctvnews.ca/2-youths-stabbed-in-burnaby-rcmp-1.6706889';
+  const url = 'https://vancouver.citynews.ca/2024/01/17/surrey-stabbing-suspect-unknown/';
   let output = `<a href="${url}">`;
   const today = new Date();
 
   const year = 2024;
   const month = 1; // Month number
-  const day = 1;
-  const hour = 1;
+  const day = 17;
+  const hour = 20;
   const minutes = 00;
   
   const stabDate = new Date(year, month - 1, day, hour, minutes);
